--- a/plugins/items/collection/text/template/input.TypeText.latte
+++ b/plugins/items/collection/text/template/input.TypeText.latte
@@ -1,8 +1,8 @@
-<input type="hidden" id="input{$id}" name="{$name}"
+<input type="hidden" id="input_{$id}" name="{$name}"
        value="{$value}">
 
-<div id="editor{$id}" class="editor">
-    <div id="content{$id}" class="content"
+<div id="editor_{$id}" class="editor">
+    <div id="content_{$id}" class="content"
          contenteditable="true">{$value|noescape}</div>
 </div>
 
