--- a/plugins/items/template/item_template_list_modal.latte
+++ b/plugins/items/template/item_template_list_modal.latte
@@ -10,7 +10,7 @@
                 <label class="w-full">
                     <select name="item_template_id" class="select select-bordered w-full join-item">
                         <option disabled selected>Select type of item to add</option>
-                        {foreach $item_templates as $item_template}
+                        {foreach (new \Items\ItemTemplate)->select(['id', 'name', 'plugin.active'])->addJoin('plugin', 'plugin_url', '=', 'url')->fetchAll() as $item_template}
                             {if $item_template->active}
                                 <option value="{$item_template->id}">{$item_template->name}</option>
                             {/if}
@@ -26,6 +26,8 @@
     </div>
 </div>
 
-<label for="template_list_modal" class="btn btn-square btn-primary absolute bottom-4 left-1/2 -ml-5">
-    {icon("feather/plus.svg")|noescape}
-</label>
+<div class="text-center p-4">
+    <label for="template_list_modal" class="btn btn-square btn-primary">
+        {icon("feather/plus.svg")|noescape}
+    </label>
+</div>
