Update items plugin

--- a/plugins/items/collection/image/template/item.latte
+++ b/plugins/items/collection/image/template/item.latte
@@ -1,4 +1,4 @@
-<div class="item item-image {if !$item->parent_id}{/if}" id="item-{$item->id}">
+<div class="item item-image" id="item-{$item->id}">
 
     {define item}
         <div class="relative">
