--- a/plugins/items/collection/article/template/page.latte
+++ b/plugins/items/collection/article/template/page.latte
@@ -105,7 +105,7 @@
             <div class="space-y-4">
                 {if $items}
                     {foreach $items as $child}
-                        {print_r($child)}
+                        {$child->render()}
                     {/foreach}
                 {/if}
             </div>
