--- a/plugins/items/collection/article/template/page.latte
+++ b/plugins/items/collection/article/template/page.latte
@@ -6,12 +6,14 @@
 
             {define article}
                 <div class="space-y-4">
+                    <div class="text-xs font-bold">
                     {if $article->subject}
                         {render(path('PLUGIN_PATH') . 'tag/template/tag.latte', [
                         'tag' => $tag,
                         'item' => $item
                         ])}
                     {/if}
+                    </div>
 
                     {* Titles *}
                     <div>
