--- a/plugins/items/collection/image/template/item.latte
+++ b/plugins/items/collection/image/template/item.latte
@@ -30,7 +30,7 @@
                         </script>
                     </div>
                 {/if}
-                <div class="hidden group-hover:block absolute left-0 bottom-0">
+                <div class="hidden group-hover:block absolute left-1/2 bottom-0 -mb-5 -ml-15">
                     {render(path('PLUGIN_PATH') . 'items/template/item_admin_buttons.latte', ['item' => $item])}
                 </div>
             </div>
