--- a/plugins/items/collection/text/template/item.latte
+++ b/plugins/items/collection/text/template/item.latte
@@ -4,7 +4,7 @@
             {csrf()}
             <div class="relative group">
                 {render(path('PLUGIN_PATH') . 'items/collection/text/template/input.TypeText.latte', ['id' => $text->id, 'name' => 'text', 'value' => $text->text])}
-                <div class="hidden group-hover:block absolute left-0 bottom-0">
+                <div class="hidden group-hover:block absolute left-1/2 bottom-0 -mb-5 -ml-15">
                     {render(path('PLUGIN_PATH') . 'items/template/item_admin_buttons.latte', ['item' => $item])}
                 </div>
             </div>
