--- a/plugins/items/collection/documentation/template/item.latte
+++ b/plugins/items/collection/documentation/template/item.latte
@@ -20,9 +20,9 @@
 
     {if auth()->isLoggedIn()}
         <div class="hidden group-hover:block absolute left-1/2 bottom-0 -mb-5 -ml-15">
-            <form action="{path('BASE_PATH') . 'documentation/update/' . $item->id}" method="POST" enctype="multipart/form-data">
+            <form action="{path('BASE_PATH') . 'documentation/save/' . $item->id}" method="POST" enctype="multipart/form-data">
                 {csrf()}
-                {render(path('PLUGIN_PATH') . 'items/template/item_admin_buttons.latte', ['item' => $item])}
+                {render(path('PLUGIN_PATH') . 'items/template/admin_buttons.latte', ['item' => $item])}
             </form>
         </div>
     {/if}
