--- a/plugins/items/collection/code/template/item.latte
+++ b/plugins/items/collection/code/template/item.latte
@@ -1,21 +1,18 @@
-<div class="item item-code {if !$item->parent_id}{/if}" id="item-{$item->id}">
+<div class="item item-code" id="item-{$item->id}">
     {if auth()->isLoggedIn()}
         <form action="{path('BASE_PATH') . 'code/save/' . $item->id}" method="POST" enctype="multipart/form-data">
             {csrf()}
-            <div class="w-full">
+            <label>
+                <select class="select bg-base-300 -mb-1 border-0 w-full" name="language">
+                    <option n:foreach="$languages as $language" {if $language === $code->language}selected{/if} value="{$language}">{$language}</option>
+                </select>
+            </label>
+            <div class="relative group">
                 <label>
-                    <select class="select -mb-1" name="language">
-                        <option n:foreach="$languages as $language" {if $language === $code->language}selected{/if}
-                            value="{$language}">{$language}</option>
-                    </select>
+                    <textarea class="rounded bg-base-300 w-full border-0 p-4" name="code" placeholder="Your code here…">{$code->code}</textarea>
                 </label>
-                <div class="relative group">
-                    <label>
-                        <textarea class="textarea" class="bg-base-200 w-full" name="code" placeholder="Your code here…">{$code->code}</textarea>
-                    </label>
-                    <div class="hidden group-hover:block absolute left-0 bottom-0">
-                        {render(path('PLUGIN_PATH') . 'items/template/admin_buttons.latte', ['item' => $item])}
-                    </div>
+                <div class="hidden group-hover:block absolute left-0 bottom-0">
+                    {render(path('PLUGIN_PATH') . 'items/template/admin_buttons.latte', ['item' => $item])}
                 </div>
             </div>
         </form>
