--- a/plugins/items/collection/article/template/page.latte
+++ b/plugins/items/collection/article/template/page.latte
@@ -5,7 +5,7 @@
         <article>
 
             {define article}
-                <div class="space-y-4">
+                <div class="space-y-4 mb-4">
                     <div class="text-xs font-bold">
                     {if $article->subject}
                         {render(path('PLUGIN_PATH') . 'tag/template/tag.latte', [
