--- a/plugins/items/collection/text/template/toolbar.latte
+++ b/plugins/items/collection/text/template/toolbar.latte
@@ -1,11 +1,11 @@
 <div id="toolbar" class="tools join" style="display: none;">
-    <button title="Bold" class="btn btn-neutral btn-square join-item" data-edit="bold">
+    <button title="Bold" class="btn btn-neutral btn-square join-item" data-cmd="bold">
         {icon("feather/bold.svg")|noescape}
     </button>
-    <button title="Italic" class="btn btn-neutral btn-square join-item" data-edit="italic">
+    <button title="Italic" class="btn btn-neutral btn-square join-item" data-cmd="italic">
         {icon("feather/italic.svg")|noescape}
     </button>
-    <button title="Underline" class="btn btn-neutral btn-square join-item" data-edit="underline">
+    <button title="Underline" class="btn btn-neutral btn-square join-item" data-cmd="underline">
         {icon("feather/underline.svg")|noescape}
     </button>
     {*
