--- a/plugins/items/collection/documentation/template/page.latte
+++ b/plugins/items/collection/documentation/template/page.latte
@@ -12,7 +12,7 @@
             <div class="col-span-3">
                 <article>
                     {define documentation}
-                        <div class="space-y-4">
+                        <div class="space-y-4 mt-8 mb-12">
                             <div class="text-xs font-bold">
                                 {if $documentation->subject}
                                     {render(path('PLUGIN_PATH') . 'tag/template/tag.latte', [
