--- a/plugins/items/template/settings.latte
+++ b/plugins/items/template/settings.latte
@@ -1,56 +1,8 @@
-{extends Path::get('PUBLIC_PATH') . \Ivy\Manager\TemplateManager::file('body.latte')}
+{extends path('PUBLIC_PATH') . file('body.latte')}
 
 {block main}
     <main class="grow p-4 w-full max-w-5xl mx-auto">
-        <form action="{path('BASE_PATH') . 'admin/plugin/post'}" method="POST" enctype="multipart/form-data">
-            <div class="space-y-4">
+        Test items settings
 
-                <h1 class="leading-none text-6xl font-bold">Items plugins</h1>
-
-                <div n:if="$collection" class="overflow-x-auto">
-                    <table class="table">
-                        <thead>
-                        <tr>
-                            <th></th>
-                            <th>Name</th>
-                            <th>Description</th>
-                            <th>Version</th>
-                            <th>Type</th>
-                            <th></th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        {foreach $collection as $plugin}
-                            <tr>
-                                <td>
-                                    {\Ivy\Button::switch('plugin[' . $plugin->id . '][active]', $plugin->active, 'plugin_' . $plugin->id)}
-                                </td>
-                                <td><strong>{$plugin->name}</strong></td>
-                                <td>{$plugin->description}</td>
-                                <td>{$plugin->version}</td>
-                                <td>{$plugin->type}</td>
-                                <td class="text-right">
-                                    <input type="hidden" name="plugin[{$plugin->id}][id]" value="{$plugin->id}">
-                                    <div class="join">
-                                        <a n:if="$plugin->settings && $plugin->active"
-                                                class="btn btn-neutral btn-square join-item"
-                                                href="{= Path::get('BASE_PATH') . 'plugin/' . $plugin->getUrl()}">
-                                            {icon("feather/settings.svg")|noescape}
-                                        </a>
-                                        {\Ivy\Button::delete('plugin[' . $plugin->id . '][delete]', "plugin_" . $plugin->id)}
-                                    </div>
-                                </td>
-                            </tr>
-                        {/foreach}
-                        </tbody>
-                    </table>
-                </div>
-
-                <div class="text-center">
-                    {button type:submit, text:text('button.update')}
-                </div>
-
-            </div>
-        </form>
     </main>
 {/block}
