--- a/templates/base/admin/plugin.latte
+++ b/templates/base/admin/plugin.latte
@@ -36,8 +36,8 @@
                                     <div class="join">
                                          <a n:if="$plugin->active" n:foreach="$plugin->getInfo()->getActions() as $action"
                                                 class="btn btn-neutral btn-square join-item"
-                                                title="{text('plugin.'.$plugin->url.'.'.$action['text'])}"
-                                                href="{path('BASE_PATH') . 'plugin' . DIRECTORY_SEPARATOR . $plugin->url . DIRECTORY_SEPARATOR . $action['url']}">
+                                                title="{text($plugin->url.'.'.$action['text'])}"
+                                                href="{path('BASE_PATH') . 'admin' . DIRECTORY_SEPARATOR . 'plugin' . DIRECTORY_SEPARATOR . $plugin->url . DIRECTORY_SEPARATOR . $action['url']}">
                                                 {icon($action['icon'])|noescape}
                                         </a>
                                         <a n:if="$plugin->active && $plugin->getInfo()->getCollection()"
@@ -45,6 +45,12 @@
                                                 title="{text('plugin.collection')}"
                                                 href="{path('BASE_PATH') . 'admin' . DIRECTORY_SEPARATOR . 'plugin' . DIRECTORY_SEPARATOR . $plugin->url . DIRECTORY_SEPARATOR . 'collection'}">
                                             {icon("feather/package.svg")|noescape}
+                                        </a>
+                                        <a n:if="$plugin->active && $plugin->getInfo()->getSettings()"
+                                                class="btn btn-neutral btn-square join-item"
+                                                title="{text('setting.settings')}"
+                                                href="{path('BASE_PATH') . 'admin' . DIRECTORY_SEPARATOR . 'plugin' . DIRECTORY_SEPARATOR . $plugin->url . DIRECTORY_SEPARATOR . 'settings'}">
+                                            {icon("feather/settings.svg")|noescape}
                                         </a>
                                         {button type:delete, name:"plugin[$key][delete]", value:"plugin_" . $plugin->id, id:$plugin->id, placeholder:$plugin->name}
                                     </div>
