--- a/plugins/timeline/template/item.latte
+++ b/plugins/timeline/template/item.latte
@@ -1,17 +1,18 @@
-<div class="item item-timeline relative group" id="item-{$item->id}">
-    <div class="flex justify-between items-baseline">
-        <div class="text-xs font-bold leading-none">
+<li class="item item-timeline relative group" id="item-{$item->id}">
+    <div class="timeline-start">
+        <div class="font-bold leading-none">
             {date('d.m.y', strtotime($timeline->datetime))}
         </div>
-        <div class="text-xs font-normals leading-none">
+        <div class="font-normals leading-none">
             {date('H:i', strtotime($timeline->datetime))}
         </div>
     </div>
-    <a href="{path('BASE_PATH') . 'timeline/' . $item->slug}" class="card border border-base-300">
-        <div class="card-body">
-            <p>Lorem ipsum dolor</p>
-        </div>
-    </a>
+    <div class="timeline-middle">
+        {icon("feather/arrow-up-circle.svg")|noescape}
+    </div>
+    <div class="timeline-end timeline-box">
+        <p>Lorem ipsum dolor</p>
+    </div>
 
     {if auth()->isLoggedIn()}
         <div class="hidden group-hover:block absolute left-1/2 bottom-0 -mb-5 -ml-15">
@@ -22,4 +23,4 @@
             </form>
         </div>
     {/if}
-</div>
+</li>
