--- a/plugins/items/template/template_list_modal.latte
+++ b/plugins/items/template/template_list_modal.latte
@@ -3,24 +3,9 @@
     <div class="modal-box">
         <label class="btn btn-sm btn-circle btn-ghost absolute right-2 top-2" for="template_list_modal">✕</label>
         <h3 class="text-lg font-bold">{text('items.modal.insert_item')}</h3>
-
         <form action="{path('BASE_PATH') . 'item_template/insert'}" method="POST" enctype="multipart/form-data">
             {csrf()}
-            <div class="join w-full">
-                <label class="w-full">
-                    <select name="item_template_id" class="select select-bordered w-full join-item">
-                        <option disabled selected>Select type of item to add</option>
-                        {foreach (new \Items\ItemTemplate)->select(['id', 'name', 'plugins.active'])->addJoin('plugins', 'plugin_url', '=', 'url')->fetchAll() as $item_template}
-                            {if $item_template->active}
-                                <option value="{$item_template->id}">{$item_template->name}</option>
-                            {/if}
-                        {/foreach}
-                    </select>
-                </label>
-                <div class="join-item">
-                    {button type:confirm, value:text('button.add'), title:text('items.modal.insert_selected_item')}
-                </div>
-            </div>
+            {render(path('PLUGIN_PATH') . 'items/template/template_list_select.latte')}
         </form>
 
     </div>
