Update plugins Items and Tags

--- a/plugins/items/collection/documentation/template/page.latte
+++ b/plugins/items/collection/documentation/template/page.latte
@@ -15,7 +15,7 @@
                         <div class="space-y-4 mt-8 mb-12">
                             <div class="text-xs font-bold">
                                 {if $documentation->subject}
-                                    {render(path('PLUGIN_PATH') . 'tag/template/tag.latte', [
+                                    {render(path('PLUGIN_PATH') . 'tags/template/tag.latte', [
                                     'tag' => $tag,
                                     'item' => $item
                                     ])}
