--- a/plugins/tags/template/manage.latte
+++ b/plugins/tags/template/manage.latte
@@ -6,7 +6,7 @@
             {csrf()}
 
             <div class="space-y-4">
-                <h1 class="leading-none text-6xl font-bold">{text('tag.tag.tags')}</h1>
+                <h1 class="leading-none text-6xl font-bold">{text('tags.tags.tags')}</h1>
 
                 <div class="overflow-x-auto">
                     <table class="table">
