--- a/plugins/items/collection/article/template/page.latte
+++ b/plugins/items/collection/article/template/page.latte
@@ -8,7 +8,7 @@
                 <div class="space-y-4 mb-4">
                     <div class="text-xs font-bold">
                     {if $article->subject}
-                        {render(path('PLUGIN_PATH') . 'tag/template/tag.latte', [
+                        {render(path('PLUGIN_PATH') . 'tags/template/tag.latte', [
                         'tag' => $tag,
                         'item' => $item
                         ])}
